# wdisplays

./: LICENSE  README.md  meson.build
.reuse/: dep5
protocol/: meson.build
resources/: head.ui  meson.build  resources.xml  resources.xml.in  style.css  waydisplay.ui  wdisplay.ui  wdisplays.desktop.in  wdisplays.ui
src/: config.h.in  glviewport.c  glviewport.h  headform.c  headform.h  main.c  meson.build  outputs.c  overlay.c  render.c  wdisplay.h  wdisplays.h
